// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AddSection component should render default view 1`] = `
<form>
  <StandardPage
    title="Add a new record"
  >
    <WithStyles(Grid)
      container={true}
      spacing={24}
    >
      <WithStyles(Grid)
        item={true}
        xs={12}
      >
        <StandardCard
          title="Identify your new record"
        >
          <WithStyles(Grid)
            container={true}
            spacing={24}
          >
            <WithStyles(Grid)
              item={true}
              xs={12}
            >
              <Field
                component={
                  Object {
                    "$$typeof": Symbol(react.memo),
                    "Naked": [Function],
                    "WrappedComponent": [Function],
                    "compare": null,
                    "displayName": "Connect(WithStyles(AutoCompleteAsyncField))",
                    "options": Object {
                      "defaultTheme": Object {
                        "breakpoints": Object {
                          "between": [Function],
                          "down": [Function],
                          "keys": Array [
                            "xs",
                            "sm",
                            "md",
                            "lg",
                            "xl",
                          ],
                          "only": [Function],
                          "up": [Function],
                          "values": Object {
                            "lg": 1280,
                            "md": 960,
                            "sm": 600,
                            "xl": 1920,
                            "xs": 0,
                          },
                          "width": [Function],
                        },
                        "direction": "ltr",
                        "mixins": Object {
                          "gutters": [Function],
                          "toolbar": Object {
                            "@media (min-width:0px) and (orientation: landscape)": Object {
                              "minHeight": 48,
                            },
                            "@media (min-width:600px)": Object {
                              "minHeight": 64,
                            },
                            "minHeight": 56,
                          },
                        },
                        "overrides": Object {},
                        "palette": Object {
                          "action": Object {
                            "active": "rgba(0, 0, 0, 0.54)",
                            "disabled": "rgba(0, 0, 0, 0.26)",
                            "disabledBackground": "rgba(0, 0, 0, 0.12)",
                            "hover": "rgba(0, 0, 0, 0.08)",
                            "hoverOpacity": 0.08,
                            "selected": "rgba(0, 0, 0, 0.14)",
                          },
                          "augmentColor": [Function],
                          "background": Object {
                            "default": "#fafafa",
                            "paper": "#fff",
                          },
                          "common": Object {
                            "black": "#000",
                            "white": "#fff",
                          },
                          "contrastThreshold": 3,
                          "divider": "rgba(0, 0, 0, 0.12)",
                          "error": Object {
                            "contrastText": "#fff",
                            "dark": "#d32f2f",
                            "light": "#e57373",
                            "main": "#f44336",
                          },
                          "getContrastText": [Function],
                          "grey": Object {
                            "100": "#f5f5f5",
                            "200": "#eeeeee",
                            "300": "#e0e0e0",
                            "400": "#bdbdbd",
                            "50": "#fafafa",
                            "500": "#9e9e9e",
                            "600": "#757575",
                            "700": "#616161",
                            "800": "#424242",
                            "900": "#212121",
                            "A100": "#d5d5d5",
                            "A200": "#aaaaaa",
                            "A400": "#303030",
                            "A700": "#616161",
                          },
                          "primary": Object {
                            "contrastText": "#fff",
                            "dark": "#303f9f",
                            "light": "#7986cb",
                            "main": "#3f51b5",
                          },
                          "secondary": Object {
                            "contrastText": "#fff",
                            "dark": "#c51162",
                            "light": "#ff4081",
                            "main": "#f50057",
                          },
                          "text": Object {
                            "disabled": "rgba(0, 0, 0, 0.38)",
                            "hint": "rgba(0, 0, 0, 0.38)",
                            "primary": "rgba(0, 0, 0, 0.87)",
                            "secondary": "rgba(0, 0, 0, 0.54)",
                          },
                          "tonalOffset": 0.2,
                          "type": "light",
                        },
                        "props": Object {},
                        "shadows": Array [
                          "none",
                          "0px 1px 3px 0px rgba(0,0,0,0.2),0px 1px 1px 0px rgba(0,0,0,0.14),0px 2px 1px -1px rgba(0,0,0,0.12)",
                          "0px 1px 5px 0px rgba(0,0,0,0.2),0px 2px 2px 0px rgba(0,0,0,0.14),0px 3px 1px -2px rgba(0,0,0,0.12)",
                          "0px 1px 8px 0px rgba(0,0,0,0.2),0px 3px 4px 0px rgba(0,0,0,0.14),0px 3px 3px -2px rgba(0,0,0,0.12)",
                          "0px 2px 4px -1px rgba(0,0,0,0.2),0px 4px 5px 0px rgba(0,0,0,0.14),0px 1px 10px 0px rgba(0,0,0,0.12)",
                          "0px 3px 5px -1px rgba(0,0,0,0.2),0px 5px 8px 0px rgba(0,0,0,0.14),0px 1px 14px 0px rgba(0,0,0,0.12)",
                          "0px 3px 5px -1px rgba(0,0,0,0.2),0px 6px 10px 0px rgba(0,0,0,0.14),0px 1px 18px 0px rgba(0,0,0,0.12)",
                          "0px 4px 5px -2px rgba(0,0,0,0.2),0px 7px 10px 1px rgba(0,0,0,0.14),0px 2px 16px 1px rgba(0,0,0,0.12)",
                          "0px 5px 5px -3px rgba(0,0,0,0.2),0px 8px 10px 1px rgba(0,0,0,0.14),0px 3px 14px 2px rgba(0,0,0,0.12)",
                          "0px 5px 6px -3px rgba(0,0,0,0.2),0px 9px 12px 1px rgba(0,0,0,0.14),0px 3px 16px 2px rgba(0,0,0,0.12)",
                          "0px 6px 6px -3px rgba(0,0,0,0.2),0px 10px 14px 1px rgba(0,0,0,0.14),0px 4px 18px 3px rgba(0,0,0,0.12)",
                          "0px 6px 7px -4px rgba(0,0,0,0.2),0px 11px 15px 1px rgba(0,0,0,0.14),0px 4px 20px 3px rgba(0,0,0,0.12)",
                          "0px 7px 8px -4px rgba(0,0,0,0.2),0px 12px 17px 2px rgba(0,0,0,0.14),0px 5px 22px 4px rgba(0,0,0,0.12)",
                          "0px 7px 8px -4px rgba(0,0,0,0.2),0px 13px 19px 2px rgba(0,0,0,0.14),0px 5px 24px 4px rgba(0,0,0,0.12)",
                          "0px 7px 9px -4px rgba(0,0,0,0.2),0px 14px 21px 2px rgba(0,0,0,0.14),0px 5px 26px 4px rgba(0,0,0,0.12)",
                          "0px 8px 9px -5px rgba(0,0,0,0.2),0px 15px 22px 2px rgba(0,0,0,0.14),0px 6px 28px 5px rgba(0,0,0,0.12)",
                          "0px 8px 10px -5px rgba(0,0,0,0.2),0px 16px 24px 2px rgba(0,0,0,0.14),0px 6px 30px 5px rgba(0,0,0,0.12)",
                          "0px 8px 11px -5px rgba(0,0,0,0.2),0px 17px 26px 2px rgba(0,0,0,0.14),0px 6px 32px 5px rgba(0,0,0,0.12)",
                          "0px 9px 11px -5px rgba(0,0,0,0.2),0px 18px 28px 2px rgba(0,0,0,0.14),0px 7px 34px 6px rgba(0,0,0,0.12)",
                          "0px 9px 12px -6px rgba(0,0,0,0.2),0px 19px 29px 2px rgba(0,0,0,0.14),0px 7px 36px 6px rgba(0,0,0,0.12)",
                          "0px 10px 13px -6px rgba(0,0,0,0.2),0px 20px 31px 3px rgba(0,0,0,0.14),0px 8px 38px 7px rgba(0,0,0,0.12)",
                          "0px 10px 13px -6px rgba(0,0,0,0.2),0px 21px 33px 3px rgba(0,0,0,0.14),0px 8px 40px 7px rgba(0,0,0,0.12)",
                          "0px 10px 14px -6px rgba(0,0,0,0.2),0px 22px 35px 3px rgba(0,0,0,0.14),0px 8px 42px 7px rgba(0,0,0,0.12)",
                          "0px 11px 14px -7px rgba(0,0,0,0.2),0px 23px 36px 3px rgba(0,0,0,0.14),0px 9px 44px 8px rgba(0,0,0,0.12)",
                          "0px 11px 15px -7px rgba(0,0,0,0.2),0px 24px 38px 3px rgba(0,0,0,0.14),0px 9px 46px 8px rgba(0,0,0,0.12)",
                        ],
                        "shape": Object {
                          "borderRadius": 4,
                        },
                        "spacing": Object {
                          "unit": 8,
                        },
                        "transitions": Object {
                          "create": [Function],
                          "duration": Object {
                            "complex": 375,
                            "enteringScreen": 225,
                            "leavingScreen": 195,
                            "short": 250,
                            "shorter": 200,
                            "shortest": 150,
                            "standard": 300,
                          },
                          "easing": Object {
                            "easeIn": "cubic-bezier(0.4, 0, 1, 1)",
                            "easeInOut": "cubic-bezier(0.4, 0, 0.2, 1)",
                            "easeOut": "cubic-bezier(0.0, 0, 0.2, 1)",
                            "sharp": "cubic-bezier(0.4, 0, 0.6, 1)",
                          },
                          "getAutoHeightDuration": [Function],
                        },
                        "typography": Object {
                          "body1": Object {
                            "color": "rgba(0, 0, 0, 0.87)",
                            "fontFamily": "\\"Roboto\\", \\"Helvetica\\", \\"Arial\\", sans-serif",
                            "fontSize": "0.875rem",
                            "fontWeight": 400,
                            "lineHeight": "1.46429em",
                          },
                          "body1Next": Object {
                            "color": "rgba(0, 0, 0, 0.87)",
                            "fontFamily": "\\"Roboto\\", \\"Helvetica\\", \\"Arial\\", sans-serif",
                            "fontSize": "1rem",
                            "fontWeight": 400,
                            "letterSpacing": "0.00938em",
                            "lineHeight": 1.5,
                          },
                          "body2": Object {
                            "color": "rgba(0, 0, 0, 0.87)",
                            "fontFamily": "\\"Roboto\\", \\"Helvetica\\", \\"Arial\\", sans-serif",
                            "fontSize": "0.875rem",
                            "fontWeight": 500,
                            "lineHeight": "1.71429em",
                          },
                          "body2Next": Object {
                            "color": "rgba(0, 0, 0, 0.87)",
                            "fontFamily": "\\"Roboto\\", \\"Helvetica\\", \\"Arial\\", sans-serif",
                            "fontSize": "0.875rem",
                            "fontWeight": 400,
                            "letterSpacing": "0.01071em",
                            "lineHeight": 1.5,
                          },
                          "button": Object {
                            "color": "rgba(0, 0, 0, 0.87)",
                            "fontFamily": "\\"Roboto\\", \\"Helvetica\\", \\"Arial\\", sans-serif",
                            "fontSize": "0.875rem",
                            "fontWeight": 500,
                            "textTransform": "uppercase",
                          },
                          "buttonNext": Object {
                            "color": "rgba(0, 0, 0, 0.87)",
                            "fontFamily": "\\"Roboto\\", \\"Helvetica\\", \\"Arial\\", sans-serif",
                            "fontSize": "0.875rem",
                            "fontWeight": 500,
                            "letterSpacing": "0.02857em",
                            "lineHeight": 1.75,
                            "textTransform": "uppercase",
                          },
                          "caption": Object {
                            "color": "rgba(0, 0, 0, 0.54)",
                            "fontFamily": "\\"Roboto\\", \\"Helvetica\\", \\"Arial\\", sans-serif",
                            "fontSize": "0.75rem",
                            "fontWeight": 400,
                            "lineHeight": "1.375em",
                          },
                          "captionNext": Object {
                            "color": "rgba(0, 0, 0, 0.87)",
                            "fontFamily": "\\"Roboto\\", \\"Helvetica\\", \\"Arial\\", sans-serif",
                            "fontSize": "0.75rem",
                            "fontWeight": 400,
                            "letterSpacing": "0.03333em",
                            "lineHeight": 1.66,
                          },
                          "display1": Object {
                            "color": "rgba(0, 0, 0, 0.54)",
                            "fontFamily": "\\"Roboto\\", \\"Helvetica\\", \\"Arial\\", sans-serif",
                            "fontSize": "2.125rem",
                            "fontWeight": 400,
                            "lineHeight": "1.20588em",
                          },
                          "display2": Object {
                            "color": "rgba(0, 0, 0, 0.54)",
                            "fontFamily": "\\"Roboto\\", \\"Helvetica\\", \\"Arial\\", sans-serif",
                            "fontSize": "2.8125rem",
                            "fontWeight": 400,
                            "lineHeight": "1.13333em",
                            "marginLeft": "-.02em",
                          },
                          "display3": Object {
                            "color": "rgba(0, 0, 0, 0.54)",
                            "fontFamily": "\\"Roboto\\", \\"Helvetica\\", \\"Arial\\", sans-serif",
                            "fontSize": "3.5rem",
                            "fontWeight": 400,
                            "letterSpacing": "-.02em",
                            "lineHeight": "1.30357em",
                            "marginLeft": "-.02em",
                          },
                          "display4": Object {
                            "color": "rgba(0, 0, 0, 0.54)",
                            "fontFamily": "\\"Roboto\\", \\"Helvetica\\", \\"Arial\\", sans-serif",
                            "fontSize": "7rem",
                            "fontWeight": 300,
                            "letterSpacing": "-.04em",
                            "lineHeight": "1.14286em",
                            "marginLeft": "-.04em",
                          },
                          "fontFamily": "\\"Roboto\\", \\"Helvetica\\", \\"Arial\\", sans-serif",
                          "fontSize": 14,
                          "fontWeightLight": 300,
                          "fontWeightMedium": 500,
                          "fontWeightRegular": 400,
                          "h1": Object {
                            "color": "rgba(0, 0, 0, 0.87)",
                            "fontFamily": "\\"Roboto\\", \\"Helvetica\\", \\"Arial\\", sans-serif",
                            "fontSize": "6rem",
                            "fontWeight": 300,
                            "letterSpacing": "-0.01562em",
                            "lineHeight": 1,
                          },
                          "h2": Object {
                            "color": "rgba(0, 0, 0, 0.87)",
                            "fontFamily": "\\"Roboto\\", \\"Helvetica\\", \\"Arial\\", sans-serif",
                            "fontSize": "3.75rem",
                            "fontWeight": 300,
                            "letterSpacing": "-0.00833em",
                            "lineHeight": 1,
                          },
                          "h3": Object {
                            "color": "rgba(0, 0, 0, 0.87)",
                            "fontFamily": "\\"Roboto\\", \\"Helvetica\\", \\"Arial\\", sans-serif",
                            "fontSize": "3rem",
                            "fontWeight": 400,
                            "letterSpacing": "0em",
                            "lineHeight": 1.04,
                          },
                          "h4": Object {
                            "color": "rgba(0, 0, 0, 0.87)",
                            "fontFamily": "\\"Roboto\\", \\"Helvetica\\", \\"Arial\\", sans-serif",
                            "fontSize": "2.125rem",
                            "fontWeight": 400,
                            "letterSpacing": "0.00735em",
                            "lineHeight": 1.17,
                          },
                          "h5": Object {
                            "color": "rgba(0, 0, 0, 0.87)",
                            "fontFamily": "\\"Roboto\\", \\"Helvetica\\", \\"Arial\\", sans-serif",
                            "fontSize": "1.5rem",
                            "fontWeight": 400,
                            "letterSpacing": "0em",
                            "lineHeight": 1.33,
                          },
                          "h6": Object {
                            "color": "rgba(0, 0, 0, 0.87)",
                            "fontFamily": "\\"Roboto\\", \\"Helvetica\\", \\"Arial\\", sans-serif",
                            "fontSize": "1.25rem",
                            "fontWeight": 500,
                            "letterSpacing": "0.0075em",
                            "lineHeight": 1.6,
                          },
                          "headline": Object {
                            "color": "rgba(0, 0, 0, 0.87)",
                            "fontFamily": "\\"Roboto\\", \\"Helvetica\\", \\"Arial\\", sans-serif",
                            "fontSize": "1.5rem",
                            "fontWeight": 400,
                            "lineHeight": "1.35417em",
                          },
                          "overline": Object {
                            "color": "rgba(0, 0, 0, 0.87)",
                            "fontFamily": "\\"Roboto\\", \\"Helvetica\\", \\"Arial\\", sans-serif",
                            "fontSize": "0.75rem",
                            "fontWeight": 400,
                            "letterSpacing": "0.08333em",
                            "lineHeight": 2.66,
                            "textTransform": "uppercase",
                          },
                          "pxToRem": [Function],
                          "round": [Function],
                          "subheading": Object {
                            "color": "rgba(0, 0, 0, 0.87)",
                            "fontFamily": "\\"Roboto\\", \\"Helvetica\\", \\"Arial\\", sans-serif",
                            "fontSize": "1rem",
                            "fontWeight": 400,
                            "lineHeight": "1.5em",
                          },
                          "subtitle1": Object {
                            "color": "rgba(0, 0, 0, 0.87)",
                            "fontFamily": "\\"Roboto\\", \\"Helvetica\\", \\"Arial\\", sans-serif",
                            "fontSize": "1rem",
                            "fontWeight": 400,
                            "letterSpacing": "0.00938em",
                            "lineHeight": 1.75,
                          },
                          "subtitle2": Object {
                            "color": "rgba(0, 0, 0, 0.87)",
                            "fontFamily": "\\"Roboto\\", \\"Helvetica\\", \\"Arial\\", sans-serif",
                            "fontSize": "0.875rem",
                            "fontWeight": 500,
                            "letterSpacing": "0.00714em",
                            "lineHeight": 1.57,
                          },
                          "title": Object {
                            "color": "rgba(0, 0, 0, 0.87)",
                            "fontFamily": "\\"Roboto\\", \\"Helvetica\\", \\"Arial\\", sans-serif",
                            "fontSize": "1.3125rem",
                            "fontWeight": 500,
                            "lineHeight": "1.16667em",
                          },
                          "useNextVariants": false,
                        },
                        "zIndex": Object {
                          "appBar": 1100,
                          "drawer": 1200,
                          "mobileStepper": 1000,
                          "modal": 1300,
                          "snackbar": 1400,
                          "tooltip": 1500,
                        },
                      },
                    },
                    "type": [Function],
                  }
                }
                disabled={false}
                floatingLabelText="Member of collections"
                fullwidth={true}
                hintText="Begin typing to select and add record to a list of collection(s)"
                id="adminSectioncollections"
                name="adminSection.collections"
                required={true}
                validate={
                  Array [
                    [Function],
                  ]
                }
              />
            </WithStyles(Grid)>
            <WithStyles(Grid)
              item={true}
              xs={12}
            >
              <Field
                SelectDisplayProps={
                  Object {
                    "id": "rek-display-type",
                  }
                }
                component={[Function]}
                disabled={false}
                label="Work type"
                name="rek_display_type"
                placeholder="Select a Work type from the dropdown list"
                required={true}
                validate={
                  Array [
                    [Function],
                  ]
                }
              >
                <WithStyles(MenuItem)
                  key="0"
                  value={130}
                >
                  Conference Paper
                </WithStyles(MenuItem)>
                <WithStyles(MenuItem)
                  key="1"
                  value={174}
                >
                  Book
                </WithStyles(MenuItem)>
                <WithStyles(MenuItem)
                  key="2"
                  value={177}
                >
                  Book Chapter
                </WithStyles(MenuItem)>
                <WithStyles(MenuItem)
                  key="3"
                  value={179}
                >
                  Journal Article
                </WithStyles(MenuItem)>
                <WithStyles(MenuItem)
                  key="4"
                  value={181}
                >
                  Department Technical Report
                </WithStyles(MenuItem)>
                <WithStyles(MenuItem)
                  key="5"
                  value={183}
                >
                  Working Paper
                </WithStyles(MenuItem)>
                <WithStyles(MenuItem)
                  key="6"
                  value={185}
                >
                  Patent
                </WithStyles(MenuItem)>
                <WithStyles(MenuItem)
                  key="7"
                  value={187}
                >
                  Thesis
                </WithStyles(MenuItem)>
                <WithStyles(MenuItem)
                  key="8"
                  value={189}
                >
                  Seminar Paper
                </WithStyles(MenuItem)>
                <WithStyles(MenuItem)
                  key="9"
                  value={191}
                >
                  Newspaper Article
                </WithStyles(MenuItem)>
                <WithStyles(MenuItem)
                  key="10"
                  value={197}
                >
                  Conference Proceedings
                </WithStyles(MenuItem)>
                <WithStyles(MenuItem)
                  key="11"
                  value={202}
                >
                  Generic Document
                </WithStyles(MenuItem)>
                <WithStyles(MenuItem)
                  key="12"
                  value={204}
                >
                  Preprint
                </WithStyles(MenuItem)>
                <WithStyles(MenuItem)
                  key="13"
                  value={228}
                >
                  Digilib Image
                </WithStyles(MenuItem)>
                <WithStyles(MenuItem)
                  key="14"
                  value={238}
                >
                  Image
                </WithStyles(MenuItem)>
                <WithStyles(MenuItem)
                  key="15"
                  value={263}
                >
                  Audio Document
                </WithStyles(MenuItem)>
                <WithStyles(MenuItem)
                  key="16"
                  value={275}
                >
                  Research Report
                </WithStyles(MenuItem)>
                <WithStyles(MenuItem)
                  key="17"
                  value={294}
                >
                  Journal
                </WithStyles(MenuItem)>
                <WithStyles(MenuItem)
                  key="18"
                  value={310}
                >
                  Video Document
                </WithStyles(MenuItem)>
                <WithStyles(MenuItem)
                  key="19"
                  value={313}
                >
                  Creative Work
                </WithStyles(MenuItem)>
                <WithStyles(MenuItem)
                  key="20"
                  value={316}
                >
                  Design
                </WithStyles(MenuItem)>
                <WithStyles(MenuItem)
                  key="21"
                  value={371}
                >
                  Data Collection
                </WithStyles(MenuItem)>
                <WithStyles(MenuItem)
                  key="22"
                  value={374}
                >
                  Manuscript
                </WithStyles(MenuItem)>
              </Field>
            </WithStyles(Grid)>
            <WithStyles(Grid)
              item={true}
              xs={12}
            />
            <WithStyles(Grid)
              item={true}
              xs={12}
            >
              <WithStyles(Grid)
                container={true}
                spacing={8}
              >
                <Hidden
                  implementation="js"
                  lgDown={false}
                  lgUp={false}
                  mdDown={false}
                  mdUp={false}
                  smDown={false}
                  smUp={false}
                  xlDown={false}
                  xlUp={false}
                  xsDown={true}
                  xsUp={false}
                >
                  <WithStyles(Grid)
                    item={true}
                    xs={true}
                  />
                </Hidden>
                <WithStyles(Grid)
                  item={true}
                  sm="auto"
                  xs={12}
                >
                  <WithStyles(Button)
                    color="secondary"
                    fullWidth={true}
                    id="cancel-work"
                    onClick={[Function]}
                    variant="contained"
                  >
                    Cancel
                  </WithStyles(Button)>
                </WithStyles(Grid)>
                <WithStyles(Grid)
                  item={true}
                  sm="auto"
                  xs={12}
                >
                  <WithStyles(Button)
                    color="primary"
                    fullWidth={true}
                    id="submit-work"
                    variant="contained"
                  >
                    Create record
                  </WithStyles(Button)>
                </WithStyles(Grid)>
              </WithStyles(Grid)>
            </WithStyles(Grid)>
          </WithStyles(Grid)>
        </StandardCard>
      </WithStyles(Grid)>
    </WithStyles(Grid)>
  </StandardPage>
</form>
`;

exports[`AddSection component should render with subtypes 1`] = `
<form>
  <StandardPage
    title="Add a new record"
  >
    <WithStyles(Grid)
      container={true}
      spacing={24}
    >
      <WithStyles(Grid)
        item={true}
        xs={12}
      >
        <StandardCard
          title="Identify your new record"
        >
          <WithStyles(Grid)
            container={true}
            spacing={24}
          >
            <WithStyles(Grid)
              item={true}
              xs={12}
            >
              <Field
                component={
                  Object {
                    "$$typeof": Symbol(react.memo),
                    "Naked": [Function],
                    "WrappedComponent": [Function],
                    "compare": null,
                    "displayName": "Connect(WithStyles(AutoCompleteAsyncField))",
                    "options": Object {
                      "defaultTheme": Object {
                        "breakpoints": Object {
                          "between": [Function],
                          "down": [Function],
                          "keys": Array [
                            "xs",
                            "sm",
                            "md",
                            "lg",
                            "xl",
                          ],
                          "only": [Function],
                          "up": [Function],
                          "values": Object {
                            "lg": 1280,
                            "md": 960,
                            "sm": 600,
                            "xl": 1920,
                            "xs": 0,
                          },
                          "width": [Function],
                        },
                        "direction": "ltr",
                        "mixins": Object {
                          "gutters": [Function],
                          "toolbar": Object {
                            "@media (min-width:0px) and (orientation: landscape)": Object {
                              "minHeight": 48,
                            },
                            "@media (min-width:600px)": Object {
                              "minHeight": 64,
                            },
                            "minHeight": 56,
                          },
                        },
                        "overrides": Object {},
                        "palette": Object {
                          "action": Object {
                            "active": "rgba(0, 0, 0, 0.54)",
                            "disabled": "rgba(0, 0, 0, 0.26)",
                            "disabledBackground": "rgba(0, 0, 0, 0.12)",
                            "hover": "rgba(0, 0, 0, 0.08)",
                            "hoverOpacity": 0.08,
                            "selected": "rgba(0, 0, 0, 0.14)",
                          },
                          "augmentColor": [Function],
                          "background": Object {
                            "default": "#fafafa",
                            "paper": "#fff",
                          },
                          "common": Object {
                            "black": "#000",
                            "white": "#fff",
                          },
                          "contrastThreshold": 3,
                          "divider": "rgba(0, 0, 0, 0.12)",
                          "error": Object {
                            "contrastText": "#fff",
                            "dark": "#d32f2f",
                            "light": "#e57373",
                            "main": "#f44336",
                          },
                          "getContrastText": [Function],
                          "grey": Object {
                            "100": "#f5f5f5",
                            "200": "#eeeeee",
                            "300": "#e0e0e0",
                            "400": "#bdbdbd",
                            "50": "#fafafa",
                            "500": "#9e9e9e",
                            "600": "#757575",
                            "700": "#616161",
                            "800": "#424242",
                            "900": "#212121",
                            "A100": "#d5d5d5",
                            "A200": "#aaaaaa",
                            "A400": "#303030",
                            "A700": "#616161",
                          },
                          "primary": Object {
                            "contrastText": "#fff",
                            "dark": "#303f9f",
                            "light": "#7986cb",
                            "main": "#3f51b5",
                          },
                          "secondary": Object {
                            "contrastText": "#fff",
                            "dark": "#c51162",
                            "light": "#ff4081",
                            "main": "#f50057",
                          },
                          "text": Object {
                            "disabled": "rgba(0, 0, 0, 0.38)",
                            "hint": "rgba(0, 0, 0, 0.38)",
                            "primary": "rgba(0, 0, 0, 0.87)",
                            "secondary": "rgba(0, 0, 0, 0.54)",
                          },
                          "tonalOffset": 0.2,
                          "type": "light",
                        },
                        "props": Object {},
                        "shadows": Array [
                          "none",
                          "0px 1px 3px 0px rgba(0,0,0,0.2),0px 1px 1px 0px rgba(0,0,0,0.14),0px 2px 1px -1px rgba(0,0,0,0.12)",
                          "0px 1px 5px 0px rgba(0,0,0,0.2),0px 2px 2px 0px rgba(0,0,0,0.14),0px 3px 1px -2px rgba(0,0,0,0.12)",
                          "0px 1px 8px 0px rgba(0,0,0,0.2),0px 3px 4px 0px rgba(0,0,0,0.14),0px 3px 3px -2px rgba(0,0,0,0.12)",
                          "0px 2px 4px -1px rgba(0,0,0,0.2),0px 4px 5px 0px rgba(0,0,0,0.14),0px 1px 10px 0px rgba(0,0,0,0.12)",
                          "0px 3px 5px -1px rgba(0,0,0,0.2),0px 5px 8px 0px rgba(0,0,0,0.14),0px 1px 14px 0px rgba(0,0,0,0.12)",
                          "0px 3px 5px -1px rgba(0,0,0,0.2),0px 6px 10px 0px rgba(0,0,0,0.14),0px 1px 18px 0px rgba(0,0,0,0.12)",
                          "0px 4px 5px -2px rgba(0,0,0,0.2),0px 7px 10px 1px rgba(0,0,0,0.14),0px 2px 16px 1px rgba(0,0,0,0.12)",
                          "0px 5px 5px -3px rgba(0,0,0,0.2),0px 8px 10px 1px rgba(0,0,0,0.14),0px 3px 14px 2px rgba(0,0,0,0.12)",
                          "0px 5px 6px -3px rgba(0,0,0,0.2),0px 9px 12px 1px rgba(0,0,0,0.14),0px 3px 16px 2px rgba(0,0,0,0.12)",
                          "0px 6px 6px -3px rgba(0,0,0,0.2),0px 10px 14px 1px rgba(0,0,0,0.14),0px 4px 18px 3px rgba(0,0,0,0.12)",
                          "0px 6px 7px -4px rgba(0,0,0,0.2),0px 11px 15px 1px rgba(0,0,0,0.14),0px 4px 20px 3px rgba(0,0,0,0.12)",
                          "0px 7px 8px -4px rgba(0,0,0,0.2),0px 12px 17px 2px rgba(0,0,0,0.14),0px 5px 22px 4px rgba(0,0,0,0.12)",
                          "0px 7px 8px -4px rgba(0,0,0,0.2),0px 13px 19px 2px rgba(0,0,0,0.14),0px 5px 24px 4px rgba(0,0,0,0.12)",
                          "0px 7px 9px -4px rgba(0,0,0,0.2),0px 14px 21px 2px rgba(0,0,0,0.14),0px 5px 26px 4px rgba(0,0,0,0.12)",
                          "0px 8px 9px -5px rgba(0,0,0,0.2),0px 15px 22px 2px rgba(0,0,0,0.14),0px 6px 28px 5px rgba(0,0,0,0.12)",
                          "0px 8px 10px -5px rgba(0,0,0,0.2),0px 16px 24px 2px rgba(0,0,0,0.14),0px 6px 30px 5px rgba(0,0,0,0.12)",
                          "0px 8px 11px -5px rgba(0,0,0,0.2),0px 17px 26px 2px rgba(0,0,0,0.14),0px 6px 32px 5px rgba(0,0,0,0.12)",
                          "0px 9px 11px -5px rgba(0,0,0,0.2),0px 18px 28px 2px rgba(0,0,0,0.14),0px 7px 34px 6px rgba(0,0,0,0.12)",
                          "0px 9px 12px -6px rgba(0,0,0,0.2),0px 19px 29px 2px rgba(0,0,0,0.14),0px 7px 36px 6px rgba(0,0,0,0.12)",
                          "0px 10px 13px -6px rgba(0,0,0,0.2),0px 20px 31px 3px rgba(0,0,0,0.14),0px 8px 38px 7px rgba(0,0,0,0.12)",
                          "0px 10px 13px -6px rgba(0,0,0,0.2),0px 21px 33px 3px rgba(0,0,0,0.14),0px 8px 40px 7px rgba(0,0,0,0.12)",
                          "0px 10px 14px -6px rgba(0,0,0,0.2),0px 22px 35px 3px rgba(0,0,0,0.14),0px 8px 42px 7px rgba(0,0,0,0.12)",
                          "0px 11px 14px -7px rgba(0,0,0,0.2),0px 23px 36px 3px rgba(0,0,0,0.14),0px 9px 44px 8px rgba(0,0,0,0.12)",
                          "0px 11px 15px -7px rgba(0,0,0,0.2),0px 24px 38px 3px rgba(0,0,0,0.14),0px 9px 46px 8px rgba(0,0,0,0.12)",
                        ],
                        "shape": Object {
                          "borderRadius": 4,
                        },
                        "spacing": Object {
                          "unit": 8,
                        },
                        "transitions": Object {
                          "create": [Function],
                          "duration": Object {
                            "complex": 375,
                            "enteringScreen": 225,
                            "leavingScreen": 195,
                            "short": 250,
                            "shorter": 200,
                            "shortest": 150,
                            "standard": 300,
                          },
                          "easing": Object {
                            "easeIn": "cubic-bezier(0.4, 0, 1, 1)",
                            "easeInOut": "cubic-bezier(0.4, 0, 0.2, 1)",
                            "easeOut": "cubic-bezier(0.0, 0, 0.2, 1)",
                            "sharp": "cubic-bezier(0.4, 0, 0.6, 1)",
                          },
                          "getAutoHeightDuration": [Function],
                        },
                        "typography": Object {
                          "body1": Object {
                            "color": "rgba(0, 0, 0, 0.87)",
                            "fontFamily": "\\"Roboto\\", \\"Helvetica\\", \\"Arial\\", sans-serif",
                            "fontSize": "0.875rem",
                            "fontWeight": 400,
                            "lineHeight": "1.46429em",
                          },
                          "body1Next": Object {
                            "color": "rgba(0, 0, 0, 0.87)",
                            "fontFamily": "\\"Roboto\\", \\"Helvetica\\", \\"Arial\\", sans-serif",
                            "fontSize": "1rem",
                            "fontWeight": 400,
                            "letterSpacing": "0.00938em",
                            "lineHeight": 1.5,
                          },
                          "body2": Object {
                            "color": "rgba(0, 0, 0, 0.87)",
                            "fontFamily": "\\"Roboto\\", \\"Helvetica\\", \\"Arial\\", sans-serif",
                            "fontSize": "0.875rem",
                            "fontWeight": 500,
                            "lineHeight": "1.71429em",
                          },
                          "body2Next": Object {
                            "color": "rgba(0, 0, 0, 0.87)",
                            "fontFamily": "\\"Roboto\\", \\"Helvetica\\", \\"Arial\\", sans-serif",
                            "fontSize": "0.875rem",
                            "fontWeight": 400,
                            "letterSpacing": "0.01071em",
                            "lineHeight": 1.5,
                          },
                          "button": Object {
                            "color": "rgba(0, 0, 0, 0.87)",
                            "fontFamily": "\\"Roboto\\", \\"Helvetica\\", \\"Arial\\", sans-serif",
                            "fontSize": "0.875rem",
                            "fontWeight": 500,
                            "textTransform": "uppercase",
                          },
                          "buttonNext": Object {
                            "color": "rgba(0, 0, 0, 0.87)",
                            "fontFamily": "\\"Roboto\\", \\"Helvetica\\", \\"Arial\\", sans-serif",
                            "fontSize": "0.875rem",
                            "fontWeight": 500,
                            "letterSpacing": "0.02857em",
                            "lineHeight": 1.75,
                            "textTransform": "uppercase",
                          },
                          "caption": Object {
                            "color": "rgba(0, 0, 0, 0.54)",
                            "fontFamily": "\\"Roboto\\", \\"Helvetica\\", \\"Arial\\", sans-serif",
                            "fontSize": "0.75rem",
                            "fontWeight": 400,
                            "lineHeight": "1.375em",
                          },
                          "captionNext": Object {
                            "color": "rgba(0, 0, 0, 0.87)",
                            "fontFamily": "\\"Roboto\\", \\"Helvetica\\", \\"Arial\\", sans-serif",
                            "fontSize": "0.75rem",
                            "fontWeight": 400,
                            "letterSpacing": "0.03333em",
                            "lineHeight": 1.66,
                          },
                          "display1": Object {
                            "color": "rgba(0, 0, 0, 0.54)",
                            "fontFamily": "\\"Roboto\\", \\"Helvetica\\", \\"Arial\\", sans-serif",
                            "fontSize": "2.125rem",
                            "fontWeight": 400,
                            "lineHeight": "1.20588em",
                          },
                          "display2": Object {
                            "color": "rgba(0, 0, 0, 0.54)",
                            "fontFamily": "\\"Roboto\\", \\"Helvetica\\", \\"Arial\\", sans-serif",
                            "fontSize": "2.8125rem",
                            "fontWeight": 400,
                            "lineHeight": "1.13333em",
                            "marginLeft": "-.02em",
                          },
                          "display3": Object {
                            "color": "rgba(0, 0, 0, 0.54)",
                            "fontFamily": "\\"Roboto\\", \\"Helvetica\\", \\"Arial\\", sans-serif",
                            "fontSize": "3.5rem",
                            "fontWeight": 400,
                            "letterSpacing": "-.02em",
                            "lineHeight": "1.30357em",
                            "marginLeft": "-.02em",
                          },
                          "display4": Object {
                            "color": "rgba(0, 0, 0, 0.54)",
                            "fontFamily": "\\"Roboto\\", \\"Helvetica\\", \\"Arial\\", sans-serif",
                            "fontSize": "7rem",
                            "fontWeight": 300,
                            "letterSpacing": "-.04em",
                            "lineHeight": "1.14286em",
                            "marginLeft": "-.04em",
                          },
                          "fontFamily": "\\"Roboto\\", \\"Helvetica\\", \\"Arial\\", sans-serif",
                          "fontSize": 14,
                          "fontWeightLight": 300,
                          "fontWeightMedium": 500,
                          "fontWeightRegular": 400,
                          "h1": Object {
                            "color": "rgba(0, 0, 0, 0.87)",
                            "fontFamily": "\\"Roboto\\", \\"Helvetica\\", \\"Arial\\", sans-serif",
                            "fontSize": "6rem",
                            "fontWeight": 300,
                            "letterSpacing": "-0.01562em",
                            "lineHeight": 1,
                          },
                          "h2": Object {
                            "color": "rgba(0, 0, 0, 0.87)",
                            "fontFamily": "\\"Roboto\\", \\"Helvetica\\", \\"Arial\\", sans-serif",
                            "fontSize": "3.75rem",
                            "fontWeight": 300,
                            "letterSpacing": "-0.00833em",
                            "lineHeight": 1,
                          },
                          "h3": Object {
                            "color": "rgba(0, 0, 0, 0.87)",
                            "fontFamily": "\\"Roboto\\", \\"Helvetica\\", \\"Arial\\", sans-serif",
                            "fontSize": "3rem",
                            "fontWeight": 400,
                            "letterSpacing": "0em",
                            "lineHeight": 1.04,
                          },
                          "h4": Object {
                            "color": "rgba(0, 0, 0, 0.87)",
                            "fontFamily": "\\"Roboto\\", \\"Helvetica\\", \\"Arial\\", sans-serif",
                            "fontSize": "2.125rem",
                            "fontWeight": 400,
                            "letterSpacing": "0.00735em",
                            "lineHeight": 1.17,
                          },
                          "h5": Object {
                            "color": "rgba(0, 0, 0, 0.87)",
                            "fontFamily": "\\"Roboto\\", \\"Helvetica\\", \\"Arial\\", sans-serif",
                            "fontSize": "1.5rem",
                            "fontWeight": 400,
                            "letterSpacing": "0em",
                            "lineHeight": 1.33,
                          },
                          "h6": Object {
                            "color": "rgba(0, 0, 0, 0.87)",
                            "fontFamily": "\\"Roboto\\", \\"Helvetica\\", \\"Arial\\", sans-serif",
                            "fontSize": "1.25rem",
                            "fontWeight": 500,
                            "letterSpacing": "0.0075em",
                            "lineHeight": 1.6,
                          },
                          "headline": Object {
                            "color": "rgba(0, 0, 0, 0.87)",
                            "fontFamily": "\\"Roboto\\", \\"Helvetica\\", \\"Arial\\", sans-serif",
                            "fontSize": "1.5rem",
                            "fontWeight": 400,
                            "lineHeight": "1.35417em",
                          },
                          "overline": Object {
                            "color": "rgba(0, 0, 0, 0.87)",
                            "fontFamily": "\\"Roboto\\", \\"Helvetica\\", \\"Arial\\", sans-serif",
                            "fontSize": "0.75rem",
                            "fontWeight": 400,
                            "letterSpacing": "0.08333em",
                            "lineHeight": 2.66,
                            "textTransform": "uppercase",
                          },
                          "pxToRem": [Function],
                          "round": [Function],
                          "subheading": Object {
                            "color": "rgba(0, 0, 0, 0.87)",
                            "fontFamily": "\\"Roboto\\", \\"Helvetica\\", \\"Arial\\", sans-serif",
                            "fontSize": "1rem",
                            "fontWeight": 400,
                            "lineHeight": "1.5em",
                          },
                          "subtitle1": Object {
                            "color": "rgba(0, 0, 0, 0.87)",
                            "fontFamily": "\\"Roboto\\", \\"Helvetica\\", \\"Arial\\", sans-serif",
                            "fontSize": "1rem",
                            "fontWeight": 400,
                            "letterSpacing": "0.00938em",
                            "lineHeight": 1.75,
                          },
                          "subtitle2": Object {
                            "color": "rgba(0, 0, 0, 0.87)",
                            "fontFamily": "\\"Roboto\\", \\"Helvetica\\", \\"Arial\\", sans-serif",
                            "fontSize": "0.875rem",
                            "fontWeight": 500,
                            "letterSpacing": "0.00714em",
                            "lineHeight": 1.57,
                          },
                          "title": Object {
                            "color": "rgba(0, 0, 0, 0.87)",
                            "fontFamily": "\\"Roboto\\", \\"Helvetica\\", \\"Arial\\", sans-serif",
                            "fontSize": "1.3125rem",
                            "fontWeight": 500,
                            "lineHeight": "1.16667em",
                          },
                          "useNextVariants": false,
                        },
                        "zIndex": Object {
                          "appBar": 1100,
                          "drawer": 1200,
                          "mobileStepper": 1000,
                          "modal": 1300,
                          "snackbar": 1400,
                          "tooltip": 1500,
                        },
                      },
                    },
                    "type": [Function],
                  }
                }
                disabled={false}
                floatingLabelText="Member of collections"
                fullwidth={true}
                hintText="Begin typing to select and add record to a list of collection(s)"
                id="adminSectioncollections"
                name="adminSection.collections"
                required={true}
                validate={
                  Array [
                    [Function],
                  ]
                }
              />
            </WithStyles(Grid)>
            <WithStyles(Grid)
              item={true}
              xs={12}
            >
              <Field
                SelectDisplayProps={
                  Object {
                    "id": "rek-display-type",
                  }
                }
                component={[Function]}
                disabled={false}
                label="Work type"
                name="rek_display_type"
                placeholder="Select a Work type from the dropdown list"
                required={true}
                validate={
                  Array [
                    [Function],
                  ]
                }
              >
                <WithStyles(MenuItem)
                  key="0"
                  value={130}
                >
                  Conference Paper
                </WithStyles(MenuItem)>
                <WithStyles(MenuItem)
                  key="1"
                  value={174}
                >
                  Book
                </WithStyles(MenuItem)>
                <WithStyles(MenuItem)
                  key="2"
                  value={177}
                >
                  Book Chapter
                </WithStyles(MenuItem)>
                <WithStyles(MenuItem)
                  key="3"
                  value={179}
                >
                  Journal Article
                </WithStyles(MenuItem)>
                <WithStyles(MenuItem)
                  key="4"
                  value={181}
                >
                  Department Technical Report
                </WithStyles(MenuItem)>
                <WithStyles(MenuItem)
                  key="5"
                  value={183}
                >
                  Working Paper
                </WithStyles(MenuItem)>
                <WithStyles(MenuItem)
                  key="6"
                  value={185}
                >
                  Patent
                </WithStyles(MenuItem)>
                <WithStyles(MenuItem)
                  key="7"
                  value={187}
                >
                  Thesis
                </WithStyles(MenuItem)>
                <WithStyles(MenuItem)
                  key="8"
                  value={189}
                >
                  Seminar Paper
                </WithStyles(MenuItem)>
                <WithStyles(MenuItem)
                  key="9"
                  value={191}
                >
                  Newspaper Article
                </WithStyles(MenuItem)>
                <WithStyles(MenuItem)
                  key="10"
                  value={197}
                >
                  Conference Proceedings
                </WithStyles(MenuItem)>
                <WithStyles(MenuItem)
                  key="11"
                  value={202}
                >
                  Generic Document
                </WithStyles(MenuItem)>
                <WithStyles(MenuItem)
                  key="12"
                  value={204}
                >
                  Preprint
                </WithStyles(MenuItem)>
                <WithStyles(MenuItem)
                  key="13"
                  value={228}
                >
                  Digilib Image
                </WithStyles(MenuItem)>
                <WithStyles(MenuItem)
                  key="14"
                  value={238}
                >
                  Image
                </WithStyles(MenuItem)>
                <WithStyles(MenuItem)
                  key="15"
                  value={263}
                >
                  Audio Document
                </WithStyles(MenuItem)>
                <WithStyles(MenuItem)
                  key="16"
                  value={275}
                >
                  Research Report
                </WithStyles(MenuItem)>
                <WithStyles(MenuItem)
                  key="17"
                  value={294}
                >
                  Journal
                </WithStyles(MenuItem)>
                <WithStyles(MenuItem)
                  key="18"
                  value={310}
                >
                  Video Document
                </WithStyles(MenuItem)>
                <WithStyles(MenuItem)
                  key="19"
                  value={313}
                >
                  Creative Work
                </WithStyles(MenuItem)>
                <WithStyles(MenuItem)
                  key="20"
                  value={316}
                >
                  Design
                </WithStyles(MenuItem)>
                <WithStyles(MenuItem)
                  key="21"
                  value={371}
                >
                  Data Collection
                </WithStyles(MenuItem)>
                <WithStyles(MenuItem)
                  key="22"
                  value={374}
                >
                  Manuscript
                </WithStyles(MenuItem)>
              </Field>
            </WithStyles(Grid)>
            <WithStyles(Grid)
              item={true}
              xs={12}
            >
              <WithStyles(Grid)
                item={true}
                xs={12}
              >
                <Field
                  SelectDisplayProps={
                    Object {
                      "id": "rek-subtype",
                    }
                  }
                  component={[Function]}
                  disabled={false}
                  id="rek-subtype"
                  label="Work subtype"
                  name="adminSection.rek_subtype"
                  placeholder="Select a work subtype from the dropdown list"
                  required={true}
                  validate={
                    Array [
                      [Function],
                    ]
                  }
                />
              </WithStyles(Grid)>
            </WithStyles(Grid)>
            <WithStyles(Grid)
              item={true}
              xs={12}
            >
              <WithStyles(Grid)
                container={true}
                spacing={8}
              >
                <Hidden
                  implementation="js"
                  lgDown={false}
                  lgUp={false}
                  mdDown={false}
                  mdUp={false}
                  smDown={false}
                  smUp={false}
                  xlDown={false}
                  xlUp={false}
                  xsDown={true}
                  xsUp={false}
                >
                  <WithStyles(Grid)
                    item={true}
                    xs={true}
                  />
                </Hidden>
                <WithStyles(Grid)
                  item={true}
                  sm="auto"
                  xs={12}
                >
                  <WithStyles(Button)
                    color="secondary"
                    fullWidth={true}
                    id="cancel-work"
                    onClick={[Function]}
                    variant="contained"
                  >
                    Cancel
                  </WithStyles(Button)>
                </WithStyles(Grid)>
                <WithStyles(Grid)
                  item={true}
                  sm="auto"
                  xs={12}
                >
                  <WithStyles(Button)
                    color="primary"
                    fullWidth={true}
                    id="submit-work"
                    variant="contained"
                  >
                    Create record
                  </WithStyles(Button)>
                </WithStyles(Grid)>
              </WithStyles(Grid)>
            </WithStyles(Grid)>
          </WithStyles(Grid)>
        </StandardCard>
      </WithStyles(Grid)>
    </WithStyles(Grid)>
  </StandardPage>
</form>
`;
